--- a/booki/css/style.css
+++ b/booki/css/style.css
@@ -1,7 +1,6 @@
 html{
-    
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 /* font*/
 h1,h2,h3,p,a{
@@ -23,9 +22,12 @@ p{
     font-size: 16px;
     font-weight: 400;
 }
+
 /* header*/
 header{
     display:flex;
+    justify-content: space-between;
+    width: auto;
     
 }
 a{
@@ -38,15 +40,14 @@ main{
 
 #menu{
     display: flex;
-    margin-left: 975px;
-    
 }
 #nav-hebergements{
     text-decoration: none;
-    
+    width: auto;
 }
 #nav-activites{
     text-decoration: none;
+    width: auto;
     
 }
 #nav-container-hebergement{
@@ -66,13 +67,13 @@ main{
 
 }
 #logo{
-    margin-top: 44px;
-    margin-left: 55px;
-    margin-bottom: 63px;
+    align-items: center;
+    display: flex;
+    margin-left:4%;
 }
 #logo img{
-    width: 61px;
-    height: 19px;
+    width: 50%;
+    
 }
 
 /* header hover animation*/
@@ -392,11 +393,16 @@ main{
     width: 1337px;
     height: 493px;
     margin-bottom: 61px;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 #annonce-activites{
     display: flex;
     margin-top: 18px;
+    display: flex;
+    
 }
 #titre-activites p{
     font-size: 22px;
@@ -408,7 +414,7 @@ main{
 .card-activites{
     width: 302px;
     height: 444.51px;
-    margin-right: 50px;
+    margin-right: 40px;
     background: #FFFFFF;
     border-radius: 20px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -441,7 +447,7 @@ main{
     
 }
 .card-activites img {
-    border-radius: 20px;
+    border-radius: 5%;
     width: 302px;
     height:445px;
     object-fit:cover;
@@ -474,3 +480,14 @@ li{
 ul h3{
     padding-bottom: 20px;
 }
+
+
+
+
+
+@media (max-width: 992px){
+body{
+    background-color: black;
+}
+}
+    
